syntax = "proto3";

option java_package = "rescuecore2.messages.control";
option java_outer_classname = "ControlMessageProto";

message StrListProto {
  repeated string values = 1;
}

message IntListProto {
  repeated int32 values = 1;
}

message IntMatrixProto {
  repeated IntListProto values = 1;
}

message ValueProto {
  oneof value {
    int32 valueInt = 1;
    bool valueBool = 2;
    double valueDouble = 3;
    bytes listByte = 4;
    IntListProto listInt = 5;
    IntMatrixProto matrixInt = 6;
  }
}

message PropertyProto {
  int32 urnID = 1;
  repeated ValueProto fields = 2;
}

message EntityProto {
  int32 urnID = 1;
  int32 entityID = 2;
  repeated PropertyProto properties = 3;
}

message ConfigProto {
  map<string, string> data = 1;
  repeated string noCaches = 2;
  map<string, int32> intData = 3;
  map<string, double> floatData = 4;
  map<string, bool> booleanData = 5;
  map<string, StrListProto> arrayData = 6;
}

message PropertyMapProto {
  map<string, PropertyProto> property = 1;
}

message ChangeSetProto {
  map<int32, PropertyMapProto> changes = 1;
  repeated int32 deletes = 2;
  map<int32, string> entitiesURNs = 3;
}

message CommandProto {
  string urn = 1;
  map<string, ValueProto> fields = 2;
}

message AKAcknowledgeProto {
  int32 requestID = 1;
  int32 agentID = 2;
}

message AKCommandProto {
  repeated CommandProto commands = 1;
}

message AKConnectProto {
  int32 requestID = 1;
  int32 version = 2;
  string agentName = 3;
  repeated string requestedEntityTypes = 4;
}

message EntityIDRequestProto {
  int32 simID = 1;
  int32 requestID = 2;
  int32 count = 3;
}

message EntityIDResponseProto {
  int32 simID = 1;
  int32 requestID = 2;
  repeated int32 newIDs = 3;
}

message GKConnectErrorProto {
  string reason = 1;
}

message GKConnectOKProto {
  repeated EntityProto entities = 1;
}

message KAConnectErrorProto {
  int32 requestID = 1;
  string reason = 2;
}

message KAConnectOKProto {
  int32 requestID = 1;
  int32 agentID = 2;
  repeated EntityProto entities = 3;
  ConfigProto config = 4;
}

message KASenseProto {
  int32 agentID = 1;
  int32 time = 2;
  ChangeSetProto changes = 3;
  repeated CommandProto hears = 4;
}

message KGAcknowledgeProto {
}

message KGConnectProto {
  int32 version = 1;
}

message KSAfterShockInfoProto {
  repeated int32 times = 1;
  repeated float intensities = 2;
}

message KSCommandsProto {
  int32 simID = 1;
  int32 time = 2;
  repeated CommandProto commands = 3;
}

message KSConnectErrorProto {
  int32 requestID = 1;
  string reason = 2;
}

message KSConnectOKProto {
  int32 simID = 1;
  int32 requestID = 2;
  repeated EntityProto entities = 3;
  ConfigProto config = 4;
}

message KSUpdateProto {
  int32 simID = 1;
  int32 time = 2;
  ChangeSetProto changes = 3;
}

message KVConnectErrorProto {
  int32 requestID = 1;
  string reason = 2;
}

message KVConnectOKProto {
  int32 viewerID = 1;
  int32 requestID = 2;
  repeated EntityProto entities = 3;
  ConfigProto config = 4;
}

message KVTimestepProto {
  int32 viewerID = 1;
  int32 time = 2;
  repeated CommandProto commands = 3;
  ChangeSetProto changes = 4;
}

message ShutdownProto {
}

message SKAcknowledgeProto {
  int32 simID = 1;
  int32 requestID = 2;
}

message SKConnectProto {
  int32 requestID = 1;
  int32 version = 2;
  string simulatorName = 3;
}

message SKUpdateProto {
  int32 simID = 1;
  int32 time = 2;
  ChangeSetProto changes = 3;
}

message VKAcknowledgeProto {
  int32 requestID = 1;
  int32 viewerID = 2;
}

message VKConnectProto {
  int32 requestID = 1;
  int32 version = 2;
  string viewerName = 3;
}